# AP-Chess-Project

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  myChess
headers/: Board.h  Helper.h  ParentPiece.h  Pieces.h
src/: Board.cpp  Helper.cpp  ParentPiece.cpp  Pieces.cpp  main.cpp
